# Apertium-Web-Improvement-2

./: 001-README  README
apertium-br-fr/: ACKNOWLEDGEMENTS  AUTHORS  Makefile.am  README  apertium-br-fr.br-fr.dix  apertium-br-fr.br-fr.rlx  apertium-br-fr.br-fr.t1x  apertium-br-fr.br-fr.t2x  apertium-br-fr.br-fr.t3x  apertium-br-fr.br.dix  apertium-br-fr.fr.metadix  apertium-br-fr.post-fr.dix  configure.ac  modes.xml  parole-tags.txt  pending-tests.sh  regression-tests.sh
apertium-br-fr/corpus/: 0001.dep.txt  0001.mor.txt  0001.syn.txt  0002.dep.txt  0002.mor.txt  0003.dep.txt  0003.mor.txt  0003.syn.txt
apertium-br-fr/dev/: apertium-br-fr.br-fr-hand-written.lrx  apertium-br-fr.br-fr.lrx  inconsistency-summary.sh  inconsistency.sh  testvoc-summary.txt
apertium-combine/memt/: Makefile  Makefile.am  TODO.list  UtfConverter.cc  aligner.cc  aligner.hh  alignment.cc  alignment.hh  apertium_collector.cc  apertium_combiner.cc  case_insensitive_morph_matcher.cc  case_insensitive_morph_matcher.hh  case_insensitive_stemmer_matcher.cc  chained_words.hh  collector.cc  collector.hh  exact_matcher.hh  generator.hh  hypotheses.cc  hypotheses.hh  irstlm_ranker.cc  irstlm_ranker.hh  matcher.hh  max_conseq_aligner.cc  minimal_crossing_aligner.cc  moses_collector.cc  moses_collector.hh  naive_beam_generator.cc  naive_beam_generator.hh  pairwise_alignment.cc  parallel_scan_generator.cc  ranker.cc  ranker.hh
apertium-dbus/: configure.ac  configure.in
apertium-dbus/src/: command_line.py  mode.py
apertium-eo-fr/: Makefile.am  apertium-eo-fr.eo.dix  apertium-eo-fr.fr-eo.t1x  apertium-eo-fr.fr.dix
apertium-eo-fr/lexic/: np_al.txt.eo-fr.dix  np_al.txt.eo.dix
apertium-hbs-eng/: Makefile.am
apertium-hbs-slv/: AUTHORS  Makefile.am  NOTES  apertium-hbs-slv.hbs-slv.dix  apertium-hbs-slv.post-hbs.dix  apertium-hbs-slv.slv-hbs.t1x  configure.ac  modes.xml
apertium-is-sv/: Makefile.am  apertium-is-sv.is-sv.dix  apertium-is-sv.sv.dix  configure.ac
apertium-lex-learner/: Makefile.am  README  apertium_lex_learner.cpp  autogen.sh  bidix_parser.cpp  bidix_parser.h  configure.ac  irstlm-ranker.cpp  irstlm_ranker.cpp  per_ranker.cpp  sample
apertium-lex-learner/scripts/: calc_baseline_diff.py  generate_candidate_rules.py  generate_sl_ambig_corpus.py  show-rule-ranking.sh  translate-pipeline.sh
apertium-mk-bg/: Makefile.am  README  apertium-mk-bg.bg-mk.t1x  apertium-mk-bg.bg.acx  apertium-mk-bg.bg.dix  apertium-mk-bg.mk-bg.dix  apertium-mk-bg.mk-bg.rlx  apertium-mk-bg.mk-bg.t1x  apertium-mk-bg.mk.acx  apertium-mk-bg.mk.dix  apertium-mk-bg.post-bg.dix  configure.ac  test.dix  test.mk.dix
apertium-mk-bg/dev/: disambiguation.bg.txt  disambiguation.mk.txt  testvoc-summary.bg-mk.txt  testvoc-summary.mk-bg.txt
apertium-oldca-XX/: Makefile.am
apertium-pt-ca/: AUTHORS  Makefile  Makefile.am  apertium-pt-ca.ca.dix  apertium-pt-ca.post-ca.dix  apertium-pt-ca.post-pt.dix  apertium-pt-ca.pt-ca.dix  apertium-pt-ca.pt-ca.t1x  apertium-pt-ca.pt.dix  apertium-pt-ca.trules-pt-ca.xml  configure.ac  modes.xml
apertium-service/: .cproject  .project  Makefile  Makefile.in  aclocal.m4  autogen.sh  compile.sh  config.status  configure  configure.ac  freerbmt09  lttoolbox_FSTProcessor_ThreadSafety.diff  lttoolbox_FSTProcessor_bug_fix.patch
apertium-service/autom4te.cache/: output.0  output.2  output.3  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6
apertium-service/bench/: bench.py
apertium-service/conf/: configuration.xml  tc.conf
apertium-service/configuration/: configuration.xml  users.xml
apertium-service/data/: gen.sh
apertium-service/documentation/: promotional-slogans.pl
apertium-service/examples/: concur.py  test.py
apertium-service/okapi/: ApertiumXMLRPCMTConnector.java  Parameters.java
apertium-service/paper/: Makefile  comp.eps  comp.tex  freerbmt09.bib  freerbmt09.tex  make_eps.sh  make_png.sh  myplot.m  myplot2.m  myplotap.m  myplotap2.m  myplotmt2.m
apertium-service/src/: ApertiumAuthPlugin.cpp  ApertiumCategorize.cpp  ApertiumCategorize.h  ApertiumClassify.cpp  ApertiumClassify.h  ApertiumDetect.cpp  ApertiumDetect.h  ApertiumLanguagePairs.cpp  ApertiumLanguagePairs.h  ApertiumListLanguagePairs.cpp  ApertiumLogInterceptor.cpp  ApertiumServer.cpp  ApertiumServer.h  ApertiumTest.h  ApertiumTranslate.cpp  ApertiumTranslate.h  AuthenticationManager.cpp  AuthenticationManager.h  ConfigurationManager.cpp  ConfigurationManager.h  ConfigurationReader.cpp  Logger.cpp  Logger.h  Makefile  Makefile.am  Makefile.in  Modes.cpp  TextCategorizer.h  TextClassifier.cpp  config.h  config.h.in  main.cpp
apertium-sl-mk/: 2q  AUTHORS  Makefile  apertium-sl-mk.post-sl.dix  apertium-sl-mk.sl-mk.dix  apertium-sl-mk.sl-mk.empty_for_postprocessrules.dix  apertium-sl-mk.sl-mk.rlx  apertium-sl-mk.sl-mk.t1x  apertium-sl-mk.sl.tsx  apertium-sl-mk.trules-sl-mk.xml  autogen.sh  config  config.status  configure  configure.ac  modes.xml  postprocessrules-mk-sl_adv.xml  postprocessrules-mk-sl_adv_2.xml  postprocessrules-mk-sl_vbser_2.xml  postprocessrules-sl-mk_adj.xml  postprocessrules-sl-mk_adj_2.xml  postprocessrules-sl-mk_adv.xml  postprocessrules-sl-mk_adv_2.xml  postprocessrules-sl-mk_n.xml  postprocessrules-sl-mk_vblex.xml  postprocessrules-sl-mk_vblex_2.xml  postprocessrules-sl-mk_vbser.xml  postprocessrules-sl-mk_vbser_2.xml  removeTrash  sl-mk.prob  traduiex.sh  trules-mk-sl.xml  trules-sl-et.xml  trules-sl-mk.xml
apertium-tolk/: Makefile.am  __init__.py  apertium-tolk  configure.in  glade.py  i18n.py  lang_names.py  tolk.ui  widget_state.py
apertium-tolk/po/: LINGUAS  af.po  ca.po  cy.po  de.po  en.po  eo.po  es.po  fr.po  ga.po  gl.po  is.po  mensajes.pot  mk.po  nl.po  no.po  oc.po  pl.po  ro.po  sl.po  tr.po  vi.po
apertium-tr-ky/: Makefile.am  apertium-tr-ky.ky.lexc  apertium-tr-ky.ky.twol  apertium-tr-ky.tr-ky.dix  apertium-tr-ky.tr-ky.rlx  apertium-tr-ky.tr-ky.t1x  modes.xml  pending-tests.sh  regression-tests.sh
apertium-tr-ky/dev/: disambiguation-notes.txt  turmorph-conv-status.txt
trunk/apertium-combine/: Makefile.am  README  (+3 more)
(+3131 files in other folders)
